[package]
name = "vedit"
version = "0.1.1"
edition = "2024"
description = "A tool that wraps auto-editor and ffmpeg for fast editing."
authors = ["atrtde"]
documentation = "https://docs.rs/vedit"
homepage = "https://github.com/atrtde/vedit"
repository = "https://github.com/atrtde/vedit"
license = "GPL-3.0-or-later"

[dependencies]
clap = {version = "4.5.53", features = ["derive"]}
